--- a/templates/partials/hero.html.twig
+++ b/templates/partials/hero.html.twig
@@ -1,8 +1,11 @@
-<div class="px-4 py-5 text-center" style="height: 100vh; {% if hero_image %}background-image: url('{{ hero_image.url }}');{% endif %}">
-    <h1 class="display-5 fw-bold">{{ page.title|raw }}</h1>
-    <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">
-            {{ content|raw }}
-        </p>
+<!-- Full Page Image Header with Vertically Centered Content -->
+<header class="masthead" style="padding-top: 150px; background-image: url('{% if hero_image %}{{ hero_image.url }}{% endif %}')">
+    <div class="container" style="height: 50vh;">
+        <div class="row align-items-center">
+            <div class="col-12 text-center">
+                <h1 class="text-uppercase">{{ page.title|raw }}</h1>
+{#                {{ content|raw }}#}
+            </div>
+        </div>
     </div>
-</div>
+</header>
