--- a/templates/modular.html.twig
+++ b/templates/modular.html.twig
@@ -1,5 +1,11 @@
 {% extends 'partials/base.html.twig' %}
 
+{% block hero %}
+    {% for module in page.collection() if module.template == 'modular/hero' %}
+        {{ module.content|raw }}
+    {% endfor %}
+{% endblock %}
+
 {% block content %}
     <div class="container">
     {% for module in page.collection() if module.template != 'modular/hero' %}
