--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,8 @@
-body {font-family: 'Roboto', sans-serif;}
-p {font-size: 17px; margin-bottom: 1.5rem; }
-h2,h3 {margin:50px 0 10px 0;}
+body {font-family: 'Open Sans', sans-serif; }
+p {font-size: 17px; margin-bottom: 1.5rem; line-height: 24px; color: #3a3939;}
+ul li{color: #3a3939;}
+h2 {font-size: 35px; font-weight: 600;}
+h2,h3 {margin:50px 0 10px 0; font-family: 'Nunito', sans-serif;}
 
 .clearfix:after {
     content: ".";
@@ -10,8 +12,7 @@ h2,h3 {margin:50px 0 10px 0;}
     clear: both;
 }
 
-figure.image-caption {margin: 0 0 1rem 0 !important;padding: 0;border: 1px solid #e8e8e8;}
-figure.image-caption figcaption {text-align: left; padding: 5px;}
+figcaption {text-align: left; padding: 5px 0 0 0; font-size:16px !important;}
 
 .navbar.navbar-transparent{
     background-color:transparent!important;
