--- a/templates/partials/hero.html.twig
+++ b/templates/partials/hero.html.twig
@@ -1,5 +1,5 @@
 <!-- Full Page Image Header with Vertically Centered Content -->
-<header class="masthead" style="padding-top: 150px; background-image: url('{% if hero_image %}{{ hero_image.url }}{% endif %}')">
+<header class="masthead" style="padding-top: 150px; background-image: url('{% if hero_image %}{{ hero_image.url }}{% else %}https://placehold.co/1800x600?text=Placeholder+voor+hero{% endif %}')">
     <div class="container" style="height: 50vh;">
         <div class="row align-items-center">
             <div class="col-12 text-center">
