--- a/templates/partials/navigation.html.twig
+++ b/templates/partials/navigation.html.twig
@@ -1,11 +1,11 @@
 <!-- Navigation -->
-<nav class="navbar navbar-absolute navbar-transparent navbar-expand-lg navbar-light bg-light ">
+<nav class="navbar navbar-absolute navbar-transparent navbar-expand-lg navbar-dark bg-light ">
     <div class="container">
-
+        <a class="navbar-brand" href="#">&nbsp;</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarResponsive">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarResponsive">
             <ul class="navbar-nav">
                 {% for page in pages.children.visible %}
                     {% set current_page = (page.active or page.activeChild) ? 'active' : '' %}
@@ -17,3 +17,4 @@
         </div>
     </div>
 </nav>
+
