--- a/css/custom.css
+++ b/css/custom.css
@@ -15,9 +15,7 @@ h2,h3 {margin:50px 0 10px 0; font-family: 'Nunito', sans-serif;}
 figcaption {text-align: left; padding: 5px 0 0 0; font-size:16px !important;}
 
 .masthead {
-    height: 60vh;
-    min-height: 400px;
-    /*background-image: url('http://localhost:8080/user/pages/02.camper-reizen/14.caminitodelray21/03._dag1/IMG_0672.JPG');*/
+    min-height: 200px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -26,13 +24,17 @@ figcaption {text-align: left; padding: 5px 0 0 0; font-size:16px !important;}
 
 .masthead h1{
     font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.2));
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
+    font-weight: bold;
+    color: white;
+    /*background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.2));*/
+    /*-webkit-text-fill-color: transparent;*/
+    /*-webkit-background-clip: text;*/
     /*background-clip: text;*/
-    font-size: 5rem;
+    font-size: 4rem;
+    /*font-family: Mont,arial,sans-serif;*/
     line-height: 5rem;
     letter-spacing: 0.5rem;
+    text-shadow: 0 0 5px rgba(0,0,0,.2);
 }
 
 .masthead p {
@@ -53,13 +55,15 @@ figcaption {text-align: left; padding: 5px 0 0 0; font-size:16px !important;}
     min-width:100px;
     font-weight:100;
     color: white;
-    background-color:rgba(222,222,222,.3);
+    background-color:rgba(0,0,0,.5);
     margin-left:10px;
     border-radius: 7px;
+    /*font-weight: 400;*/
+    font-family: 'Nunito', sans-serif;
 }
 
 .navbar ul.navbar-nav li a:hover {
-    background-color:rgba(222,222,222,.6)
+    background-color:rgba(0,0,0,.7);
 }
 
 .navbar.navbar-absolute {
