--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -16,7 +16,7 @@
 {% block stylesheets %}
     {% do assets.addCss('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css', 99) %}
     {% do assets.addCss('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css', 99) %}
-    {% do assets.addCss('theme://css/custom.css', 98) %}
+    {% do assets.addCss('theme://css/custom.css?v=1', 98) %}
     {% do assets.addCss('theme://css/travel-overview-gallery.css', 98) %}
 {% endblock %}
 
