--- a/templates/partials/hero.html.twig
+++ b/templates/partials/hero.html.twig
@@ -1,10 +1,8 @@
-<header class="masthead" style="padding-top: 150px; background-image: url('{% if hero_image %}{{ hero_image.url }}{% else %}https://placehold.co/1800x600?text=Placeholder+voor+hero{% endif %}')">
-    <div class="container" style="height: 50vh;">
+<header class="masthead" style="{% if header.hero_size %}height:{{ header.hero_size }}vh; {% else %}height:60vh;{% endif %} background-image: url('{% if hero_image %}{{ hero_image.url }}{% else %}https://placehold.co/1800x600?text=Placeholder+voor+hero{% endif %}')">
+    <div class="container">
         <div class="row align-items-center">
-            <div class="col-12 text-center">
-                {% if not page.home() %}
-                <h1 class="text-uppercase">{{ page.title|raw }}</h1>
-                {%  endif %}
+            <div class="col-12 text-center" style="padding-top: {% if header.hero_title_padding %}{{ header.hero_title_padding }}vh; {% else %}15vh;{% endif %}">
+                <h1 class="text-uppercase" style="color: {% if header.hero_title_color %}{{ header.hero_title_color }}; {% else %}white;{% endif %}">{{ page.title|raw }}</h1>
             </div>
         </div>
     </div>
